[package]
edition = "2021"
name = "gpus"
version = "0.0.14"
authors = ["MrTitanHearted"]
description = "Easy CLI command for retrieving information about the gpus and drivers"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/gpus/latest/gpus/"
homepage = "https://github.com/MrTitanHearted/gpus"
repository = "https://github.com/MrTitanHearted/gpus"
keywords = ["gpu", "gpus", "adapters"]
include = ["src/", "LICENSE", "README.md"]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3

[dependencies]
wgpu = "0.13.1"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
